# restapi1-src/app/Http/Resources/CompanyResource.php
@@ -3,6 +3,8 @@
 namespace App\Http\Resources;
 
 use App\Models\Company;
+use App\Http\Resources\CommentResource;
+use App\Http\Resources\CommentSectionResource;
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
 
@@ -12,6 +14,7 @@ use Illuminate\Http\Resources\Json\JsonResource;
  *     @OA\Property(property="name", type="string", description="Название"),
  *     @OA\Property(property="address", ref="#/components/schemas/PhoneResource", description="Адрес компании"),
  *     @OA\Property(property="phones", type="array", description="Телефоны компании", @OA\Items(ref="#/components/schemas/PhoneResource")),
+ *     @OA\Property(property="comments_section", ref="#/components/schemas/CommentSectionResource", description="Секция комментариев компании"),
  * })
  *
  * @property Company $resource
@@ -21,11 +24,14 @@ class CompanyResource extends JsonResource
     public function toArray(Request $request): array
     {
         $company = $this->resource;
+        $comments = $company->comments()->with(['user', 'parent'])->orderBy('created_at', 'desc')->cursorPaginate(15);
+
         return [
             'id' => $company->id,
             'name' => $company->name,
             'address' => AddressResource::make($company?->address),
             'phones' => PhoneResource::collection($company->phones),
+            'comments_section' => CommentSectionResource::make($comments),
         ];
     }
 }
